--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ LIVE=false
 API_KEY=your_api_key_here
 API_SECRET=your_api_secret_here
 PASSPHRASE=
-SYMBOLS=BTC/USDT,ETH/USDT
+SYMBOLS=BTC/USDT,ETH/USDT,SOL/USDT,XRP/USDT
 TIMEFRAME=5m
 RISK_PER_TRADE=1
 DAILY_LOSS_CAP=2
-BASE_USDT=1000
+BASE_USDT=100
